# rentify-nl

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.dev.yml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  postCreate.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  billing.py  gdpr.py  listings.py  notifications.py  oauth.py  preferences.py
backend/app/db/: session.py
backend/app/middleware/: cors.py  logging_mw.py  paid_gate.py  rate_limit.py
backend/app/models/: __init__.py  feature_flag.py  listing.py  match.py  notification.py  preference.py  user.py
backend/app/services/: auth_service.py  email_service.py  feature_flag_service.py  matcher.py  stripe_service.py  telegram_service.py
backend/app/tasks/: reminders.py
backend/app/workers/: tasks.py  worker.py
backend/scripts/: create_demo_user.py
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_feature_flags.py  test_health.py  test_matcher.py  test_paid_gate.py  test_preferences.py
backend/tests/integration/: test_db_integration.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue
frontend/src/__tests__/: Dashboard.test.ts  Landing.test.ts  Signup.test.ts
frontend/src/components/: CookieConsent.vue  ErrorAlert.vue  GoogleSignIn.vue  ListingCard.vue  LoadingSpinner.vue  TrialBanner.vue
scrapers/: pyproject.toml  requirements.txt
scrapers/src/: base_scraper.py  deduplicator.py  robots_checker.py  worker.py
scrapers/src/anti_detection/: agent_rotator.py  proxy_rotator.py  request_throttler.py  user_agents.py
scrapers/src/models/: listing.py
scrapers/src/scrapers/: __init__.py  direct_bij_eigenaar.py  funda.py  housinganywhere.py  huurwoningen.py  kamernet.py  pararius.py
scrapers/tests/: test_agent_rotator.py  test_deduplicator.py  test_funda_parser.py  test_huurwoningen_parser.py  test_kamernet_parser.py  test_pararius_parser.py
scrapers/tests/fixtures/: direct_bij_eigenaar_search_results.html  funda_listing_page.html  funda_search_results.html  housinganywhere_search_results.html  huurwoningen_search_results.html  kamernet_search_results.html  pararius_listing_page.html  pararius_search_results.html
(+12 files in other folders)
