[project]
name = "rentify-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "sqlmodel==0.0.19",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "pydantic[email]==2.7.1",
    "passlib[argon2]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "redis[hiredis]==5.0.4",
    "dramatiq[redis]==1.16.0",
    "stripe==9.6.0",
    "httpx==0.27.0",
    "structlog==24.2.0",
    "sentry-sdk[fastapi]==2.3.1",
    "prometheus-client==0.20.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "anyio==4.3.0",
    "aiosqlite==0.20.0",
    "testcontainers==4.4.1",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "anyio==4.3.0",
    "aiosqlite==0.20.0",
    "testcontainers==4.4.1",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["A002", "A003", "N818"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
