[project]
name = "rentify-scrapers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.5",
    "aiohttp-retry==2.8.3",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.1",
    "tenacity==8.3.0",
    "structlog==24.2.0",
    "python-dotenv==1.0.1",
    "pydantic==2.7.1",
    "redis[hiredis]==5.0.4",
]

[project.optional-dependencies]
playwright = ["playwright==1.44.0"]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
